appservices/domain/rollouts-demo/rollouts-demo-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: rollouts-demo
  annotations:
    argocd.argoproj.io/sync-wave: "3"
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
spec:
  rules:
  - host: demo.poc.awx.onl
    http:
      paths:
      - backend:
          serviceName: rollouts-demo
          servicePort: http
        path: /
  tls:
  - hosts:
    - demo.poc.awx.onl
    secretName: tls-cert-demo
